# E-commerce

./: .env.example  .gitignore  AGENTS.md  README.md  REPO_MAP.md  docker-compose.yml  main.tf  terraform.tfstate  terraform.tfvars.example
autoscaler/: Dockerfile  app.py  requirements.txt
backend/: Dockerfile  alembic.ini  migration_output.txt  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_create_users_table.py  0002_create_cart_tables.py  0003_create_orders_tables.py  0004_create_products_table.py  0005_add_cart_items_unique_constraint.py  0006_protect_order_items_and_add_product_name.py
backend/app/: main.py
backend/app/core/: config.py  database.py  dependencies.py  error_handlers.py  exceptions.py  health.py  metrics.py  metrics_aggregator.py  middleware.py  security.py  sli_checks.py  system_metrics.py
backend/app/features/auth/: router.py  schemas.py  use_cases.py
backend/app/features/cart/: models.py  repositories.py  router.py  schemas.py
backend/app/features/checkout/: payment.py  router.py  use_cases.py
backend/app/features/orders/: models.py  repositories.py  schemas.py
backend/app/features/orders/domain/: __init__.py
backend/app/features/products/: models.py  repositories.py  router.py  schemas.py
backend/app/features/users/: models.py  repositories.py  schemas.py
backend/app/features/users/domain/: __init__.py
backend/scripts/: generate_sli_traffic.py  locustfile.py  seed.py
backend/tests/: conftest.py  test_auth.py  test_cart.py  test_checkout.py  test_sli.py
docker/: Dockerfile.generator
(+75 files in other folders)
