[project]
name = "ecommerce-backend"
version = "0.1.0"
description = "E-Commerce MVP Backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlmodel>=0.0.22",
    "asyncpg>=0.30.0",
    "psycopg2-binary>=2.9.10",
    "alembic>=1.14.0",
    "pydantic-settings>=2.6.0",
    "passlib[bcrypt]>=1.7.4",
    "python-jose[cryptography]>=3.3.0",
    "python-multipart>=0.0.12",
    "bcrypt>=4.1.0,<5.0.0",
    "pydantic[email]>=2.13.4",
    "prometheus-client>=0.21.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[dependency-groups]
test = [
    "pytest>=8.0",
    "pytest-asyncio>=0.25",
    "httpx>=0.28",
    "pytest-cov>=6.0",
]
